# NotificationCenterGTK4

./: Cargo.toml
notioxus/: Cargo.toml  Dioxus.toml
notioxus/src/: main.rs
notioxus_ctl/: Cargo.toml
notioxus_daemon/: Cargo.toml
