[package]
name = "notioxus"
version = "0.1.0"
authors = ["Luca"]
edition = "2021"
default-run = "notioxus"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus = { git = "https://github.com/LucaCoduriV/dioxus.git", branch = "asset_into_main", features = ["desktop", "router"] }

# Debug
dioxus-logger = "0.5.1"
